hard-gists/7270594/run.log
=== Docker Run Log for 7270594 ===
Started at: Mi 29. Okt 17:03:57 CET 2025

[2025-10-29 17:03:58] START: Running container for 7270594
[2025-10-29 17:03:58] SUCCESS: Container 5efd02d1390930c10e6a1e4e5ebb1331c2c4b4982fb2df50844eb28d4980909a started for 7270594
=== Container logs for 7270594 ===
  File "/snippet.py", line 50
    print '>>> RSA Private Key Fingerprint:\n%s' % fingerprint
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7270594 ===
[2025-10-29 17:04:00] INFO: Container 5efd02d1390930c10e6a1e4e5ebb1331c2c4b4982fb2df50844eb28d4980909a has stopped
